# pyaltim

./: .gitignore  README.md  pyproject.toml
Example_Notebooks/: Example_Dahiti_waterlevel.ipynb  Example_hydroweb_waterlevel.ipynb  Script_DAHITI_io.ipynb
Example_Notebooks/Data/: GBM_Basin.geojson  Lake_Tana.geojson
Example_Notebooks/Outputs/GBM_Basin/DAHITI_Processed/: 00_DAHITI_metadata_v0.csv  01_DAHITI_metadata_v1_Updated.csv
Example_Notebooks/Outputs/GBM_Basin/DAHITI_Raw/: 10888.csv  10889.csv  11161.csv  11194.csv  11198.csv  13084.csv  17217.csv  22142.csv  22162.csv
Example_Notebooks/Outputs/Lake_Tana/DAHITI_Processed/: 00_DAHITI_metadata_v0.csv  01_DAHITI_metadata_v1_Updated.csv
Example_Notebooks/Outputs/Lake_Tana/DAHITI_Raw/: 110.csv
src/pyaltim/core/: logging.py
src/pyaltim/geoslurp/: dahiti.py  hydrosat.py  hydroweb.py  rads.py  sword.py
src/pyaltim/io/: dahiti.py  dahiti_io.py  hydroweb_io.py
src/pyaltim/portals/: api.py  dahiti.py  hydrosat.py  hydroweb.py
